syntax = "proto3";

package ecommerce;

import "product.proto";
import "user.proto";



service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);
}
message Order {
  string id = 1;
  string user_id = 2;
  repeated Product products = 3;
  float total_amount = 4;
}
message CreateOrderRequest {
  string user_id = 1;
  repeated Product products = 2;
}

message GetOrderRequest {
  string order_id = 1;
}

message OrderResponse {
  Order order = 1;
}
